@@ -1,5 +1,8 @@
+2014-03-15  6.8.8-9 Dirk Lemstra <dirk@snakeware...>
+  * Added tiff:ignore-tags to ignore specific tags.
+
 2014-03-11  6.8.8-9 Cristy  <quetzlzacatenango@image...>
-  * The -define jpeg:extent option override the image quality (reference
+  * The -define jpeg:extent option overrides the image quality (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25200). 
 
 2014-03-09  6.8.8-8 Cristy  <quetzlzacatenango@image...>
